[package]
name = "sandbox-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "input_args"
path = "src/input_args.rs"

[[bin]]
name = "lib"
path = "src/lib.rs"